Fix threading issues and make headless_shell listen to network domain

headless_shell --determinstic-fetch was totally borked. This seem to fix it.

Bug: 714772
Change-Id: I4a6747a113cd999cb53fb1c1790761320a2b4035
Reviewed-on: https://chromium-review.googlesource.com/599947
Commit-Queue: Alex Clarke <alexclarke@chromium.org>
Reviewed-by: Eric Seckler <eseckler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491703}
Former-commit-id: 4daa38647b9aca471e3cd1730977e1eb4b033dc0